add super basic file and folder create and list